--- a/glassdoor_scrapping.ipynb
+++ b/glassdoor_scrapping.ipynb
@@ -23,7 +23,7 @@
     "from selenium import webdriver \n",
     "import time\n",
     "# consist of all the schema of the data we are extracting\n",
-    "from schema_2 import SCHEMA\n",
+    "from schema import SCHEMA\n",
     "import pandas as pd\n",
     "import selenium\n",
     "import numpy as np"
